welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value taille
	 var res = new Array[Int] (taille)
                                   ^Array1:10: error: not found: value TCouleur
			TCouleur(n) = getCouleurSol();
                        ^